   - Macroses.
   - Own tokenizer.
   - Use SYMBOL for storing FUNC name.
 * GP
   * Static types.
     + Generate ADF.
     + Mutate ADF.
     + Crossover ADF.
   - Add scripting for individual testing and comparsion.
   - Support for galapagos (https://github.com/brunoro/galapagos) visualisation tool.

Now
 * VM
  - Speep-up by move-constructor of LIST.
  - Fix free chain's consistency.
 * GP
  - Add type optimization.
  - Move functions to base GP folder.
  - Remove ADF from generated objects.
  - Optimize %0 as returning LIST.
  - Optimize IF with TRUE branch equal to FALSE branch.
  - Add configurable MUTATUION-RATE-PERCENT parameter.
  - Multithread examine.

Version 0.0.5 2012-09-05
 - Support for C++0x (GCC 4.5.3)
 - Add optimization of programs.
 * VM
   - Add comparator for WeakObject and Object to use with STL containers.
   - Speed-up by using pregenerated parameterless objects.
 * GP
   - Add optimization.
   - Optimization of wrong code returns ERROR.
   - Show parents of winner individual.
   - Add IF_TOTAL criteria (count of IFs in program).
   - Store Program instead its text (good speedup).
   - Add STATIC_WORLD_ACCESS and STATIC_MEMORY_ACCESS for check if the program access to memory and world.
   - Add NEG_ERROR_TOTAL criteria (count of ERRORs in program after optimization).
   - Optimize individual on load.
   * Static types
     + Remove types in file.

Version 0.0.4 2012-01-30
 - Support for win32.
 - Relicense as MIT.
 * VM
   - Fix function calls with ERROR arguments.
   - Make set of objects local for environment.
   - Fix Object's debugging for Win32.
 * GP
   * Static types
     + Move types to file.

Version 0.0.3 2011-12-04
 - Use own interpreter for config.
 - Remove Guile dependencies.
 * VM
   - Support for LIST in ADF definition.
   - Support for redefinition symbols.
   - Automatic symbol definition.
   - Fix work with signed INTEGER.
 * GP
   - Start to define types.

Version 0.0.2 2011-01-31
 * VM