@@ -18,6 +18,7 @@ Now
  * VM
   - Speep-up by move-constructor of LIST.
   - Fix free chain's consistency.
+  - Cache Program as Object for speed-up.
  * GP
   - Add type optimization.
   - Move functions to base GP folder.
